--- a/public/style.css
+++ b/public/style.css
@@ -10,3 +10,30 @@ h1 {
     -webkit-text-stroke-width: 1px;
 }
 
+select {
+    width: 6%;
+}
+
+#main-container {
+    /* display: flex;
+    justify-content: center */
+}
+
+.white-text {
+    color: white;
+    font-size: 16px;
+    width: 20%;
+    margin-bottom: 0;
+}
+
+#downloadModal{
+    height: 85vh;
+}
+
+.resultBackground {
+    background-color: rgba(255, 255, 255, 0.747)
+}
+
+#searchInput {
+    color: white
+}
