--- a/public/style.css
+++ b/public/style.css
@@ -14,11 +14,6 @@ select {
     width: 6%;
 }
 
-#main-container {
-    /* display: flex;
-    justify-content: center */
-}
-
 .white-text {
     color: white;
     font-size: 16px;
@@ -35,5 +30,11 @@ select {
 }
 
 #searchInput {
-    color: white
+    color: white;
+}
+.instructions {
+    color: white;
+     -webkit-text-stroke-color: black;
+     font-weight: bold;
+    -webkit-text-stroke-width: .8px;
 }
